# rag-advanced-2023

./: .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  security.yml
configs/: dev.yml  prod.yml
data/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: COMPLETE_SETUP_GUIDE.md
frontend/: api_utils.py  chat_interface.py  sidebar.py  streamlit_app.py
src/: __init__.py
src/api/: db_utils.py  main.py  pydantic_models.py
src/core/: langchain_utils.py  logging_config.py  security.py
src/embeddings/: chroma_utils.py
src/retrieval/: chunking.py  retrievers.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py  test_security.py
tests/unit/: test_api.py  test_db.py  test_retrieval.py
